# advent-of-code

./: .gitmodules
2020/clj-aoc-2020/: .gitignore  CHANGELOG.md  input2.txt
2020/clj-aoc-2020/src/advent/: core.clj  day7.clj
2020/clj-aoc-2020/test/advent/: core_test.clj  day7_test.clj
2020/kotlin/: build.gradle.kts
2022/cpp-aoc-2022/: .gitignore  CMakeLists.txt  README.md
2022/cpp-aoc-2022/atari-build/: Makefile
2022/cpp-aoc-2022/src/: day01.cpp  day01.hpp  day02.cpp  day02.hpp  day03.cpp  day03.hpp  day04.cpp  day04.hpp  day05.cpp  day05.hpp  day06.cpp  day06.hpp  day07.cpp  day07.hpp  hello.hpp  main.cpp  scratch.cpp  util.cpp  util.hpp
2022/cpp-aoc-2022/test/: day01_test.cpp  day02_test.cpp  day03_test.cpp  day04_test.cpp  day05_test.cpp  day06_test.cpp  day07_test.cpp
2022/kotlin/: build.gradle.kts
2022/kotlin/src/main/kotlin/: FileUtil.kt  ListUtils.kt  Point2D.kt  Point3D.kt  RegexUtils.kt  StringUtils.kt
2022/kotlin/src/main/resources/: realInput.dot
2023/clj-aoc-2023/: .gitignore  README.md  project.clj
2023/clj-aoc-2023/src/clj_aoc_2023/: core.clj  day01.clj  day02.clj  day03.clj  day04.clj  day05.clj  day06.clj  day07.clj  day08.clj  day09.clj  util.clj
2023/clj-aoc-2023/test/clj_aoc_2023/: core_test.clj  day01_test.clj  day02_test.clj  day03_test.clj  day04_test.clj  day05_test.clj  day06_test.clj  day07_test.clj  day08_test.clj  day09_test.clj  util_test.clj
2023/cpp-aoc-2023/: .gitignore  CMakeLists.txt  README.md
2023/cpp-aoc-2023/atari-build/: .gitignore  Makefile
2023/cpp-aoc-2023/src/: day01.cpp  day01.hpp  main.cpp  scratch.cpp  util.cpp  util.hpp
2023/cpp-aoc-2023/test/: day01_test.cpp
2024/kotlin-aoc-2024/: build.gradle.kts  settings.gradle.kts
2025/kotlin-aoc-2025/: build.gradle.kts  settings.gradle.kts
numbers-game/numbers-game-kotlin/: settings.gradle
(+151 files in other folders)
